usersvc/k8s/3_service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: user-svc
  name: user-svc
  namespace: user
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: user-svc
  type: NodePort
